--- a/styles/chmduquesne.tex
+++ b/styles/chmduquesne.tex
@@ -16,8 +16,12 @@ $endif$
 
 \setupcolor[hex]
 \definecolor[titlegrey][h=757575]
-\definecolor[sectioncolor][h=397249]
-\definecolor[rulecolor][h=9cb770]
+\definecolor[sectioncolor][h=3e788f]
+\definecolor[rulecolor][h=89cbe6]
+
+% no hyphens
+\exhyphenpenalty=10000
+\hyphenpenalty=10000
 
 % Enable hyperlinks
 \setupinteraction[state=start, color=sectioncolor]
@@ -30,7 +34,7 @@ $endif$
 
 %\setuppagenumbering[location={footer,center}]
 
-\setupbodyfont[11pt, helvetica]
+\setupbodyfont[10pt, helvetica]
 
 \setupwhitespace[medium]
 
@@ -82,17 +86,17 @@ $endfor$
 \starttext
 $if(title)$
 \startalignment[center]
-  \blank[2*big]
+  \blank[2*medium]
   {\tfd $title$}
 $if(author)$
-  \blank[3*medium]
+  \blank[2*medium]
   {\tfa $for(author)$$author$$sep$\crlf $endfor$}
 $endif$
 $if(date)$
   \blank[2*medium]
   {\tfa $date$}
 $endif$
-  \blank[3*medium]
+  \blank[2*medium]
 \stopalignment
 $endif$
 $for(include-before)$
