different colors and more word smithing

--- a/styles/chmduquesne.tex
+++ b/styles/chmduquesne.tex
@@ -16,8 +16,8 @@ $endif$
 
 \setupcolor[hex]
 \definecolor[titlegrey][h=757575]
-\definecolor[sectioncolor][h=3e788f]
-\definecolor[rulecolor][h=89cbe6]
+\definecolor[sectioncolor][h=03396c]
+\definecolor[rulecolor][h=6497b1]
 
 % no hyphens
 \exhyphenpenalty=10000
